Bios up to Gommel

--- a/Bios/Datta.html
+++ b/Bios/Datta.html
@@ -61,33 +61,51 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Branding, interaction design</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://amritadatta.myportfolio.com" target="_blank" class="green-link">https://amritadatta.myportfolio.com</a></li>
+              <li><a href="https://www.instagram.com/iamreetaa/" target="_blank" class="green-link">Instagram: @iamreetaa</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I was born to a doctor father and loving mother in India and grew up with my elder brother who was my friend and guide. In my spare time I enjoy watching newly released films. I also love traveling and exploring new locations, people and cultures-- I have visited 25 different countries around the world and these experiences have inspired my artistic motivation.​​​​​​​</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              My passion has remained unchanged. </li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              At the tender age of 5, I participated in a art competition and I finished second in my class. This early experience laid the foundation for my eventual dedication to design and art. After completing my high school education in India, with a huge support from my parents, I flew to the opposite side of the world to pursue my dreams of becoming a professional graphic designer.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I wanted to shift from being a fine art student to an emotional and expressive designer.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              When I first had to start working in Creative Cloud and I did not know how to open a document on Indesign to start working. I needed five people to show me until I could create a page yo work on. </li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Getting a scholarship to intern abroad in Prague, Czech Republic. </li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              When we work in multi-disciplinary teams and develop products from the ideation phase to implementation, this helps me to engage in the creative process.</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              To work in a global design company that provides evolution, sustainability and positive impact through design.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              I would be terrible at being a waitress! I would drop everything.</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              People not cleaning after themselves and/or wasting electricity.</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              I have been fortunate enough to travel all around the world, even through the deepest ravines of the Nile because of my parents support and their hard-work. </li><br>
             </ul>
 
           </div>
