--- a/Bios/Gerl.html
+++ b/Bios/Gerl.html
@@ -61,33 +61,61 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Multidisciplinary Design</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://mgerl7.wixsite.com/portfolio" target="_blank" class="green-link">https://mgerl7.wixsite.com/portfolio</a></li>
+              <li><a href="https://www.instagram.com/gerlgirl/" target="_blank" class="green-link">Instagram: @gerlgirl</a></li>
+              <li><a href="https://twitter.com/mack_gerl" target="_blank" class="green-link">Twitter: @mack_gerl</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>Passionate about storytelling, creativity and being weird.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              "Stay hungry, stay foolish" - Steve Jobs</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I wanted to pick a major that allowed me to be a creative problem solver.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I was always passionate about fine art and creating things. Once I switched my major to VCD I immediately felt like I belonged.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              Slicing my finger with an X-acto trying to trim a project the day it was due. (And having to go to the health center to get my finger glued)</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Putting together a student-run photo magazine while studying abroad in Florence.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Other creative people who are passionate about what they do.</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              To have seen more of the world and be working at a job I enjoy.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Driving for Uber</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Disrespect</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Hey Ya! - Outkast</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Rebel Without a Cause</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              Getting accepted to a study abroad experience in Ghana my sophomore year.</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              "You are strong"</li><br>
             </ul>
 
           </div>
