--- a/Bios/Gommel.html
+++ b/Bios/Gommel.html
@@ -61,33 +61,54 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Typography, Book Design, Illustration</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://emilygommel.com" target="_blank" class="green-link">http://emilygommel.com</a></li>
+              <li><a href="https://www.instagram.com/_____emily_____/" target="_blank" class="green-link">Instagram: @_____emily_____</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I am a creative person from west of Cleveland. I enjoy travel, embroidery, Lake Erie, screenprinting, and flea markets. My kitten, Louise, and I live in Kent until we graduate in May of 2019. After that, we want to move to a cool city and work on more great projects with smart people. </li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              Art isn't only a painting. Art is anything that's creative, passionate, and personal. An artist is someone who uses bravery, insight, creativity, and boldness to challenge the status quo. And an artist takes it personally. —Seth Godin</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I loved everything art and creativity and people told me this was the best way to make money with those skills.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              The VCD program + faculty in my early years at Kent.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Option + click and drag to duplicate</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              Reprinting a final project 3+ times to try and get it as close to perfect as possible</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Becoming an art director and publishing a magazine</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Travel, books, other artists, the creative community on both a local and international level</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              To have created work I'm proud of that impacts the world in a positive way.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Parking Services Attendant</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Focusing on the negative, also typography sins out in the world</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Dancing Queen</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              That I seem happy.</li><br>
             </ul>
 
           </div>
