--- a/Bios/Sauder.html
+++ b/Bios/Sauder.html
@@ -61,33 +61,53 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Combining typography & illustration</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://www.joshuasauder.com/" target="_blank" class="green-link">https://www.joshuasauder.com/</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I am originally from the Columbus area, where I started freelancing at age 15. After I graduate, I hope to live somewhere where I can drive my car with the windows down all year long.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              “I may not have gone where I intended to go, but I think I have ended up where I needed to be.”  ― Douglas Adams</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I heard so much good about the program from the people I talked to before college.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I always enjoyed art and am a very organized person. For me, those two things combined into design.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              ⌘S</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              The first scary class of Intro to VCD Studio.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Graduation Day.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Reading, audiobooks, & podcasts. </li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              Establish a full time freelance career. Move somewhere warm.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Olympic Marathon Runner</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Slow drivers in the left lane.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Better Now by Post Malone</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              I was born in the United States.</li><br>
             </ul>
 
           </div>
